Cumulative Layout Shift fix

--- a/masok/Component/DetailCard/DetailCard.module.css
+++ b/masok/Component/DetailCard/DetailCard.module.css
@@ -14,8 +14,16 @@
     background-image: linear-gradient(135deg, #d5f3fe 0%, #134A86 100%);
 }
 
-.picg{            
+.mainImg{
+    display: flex;    
     width: 100%;
+    height: auto;    
+    justify-content: center;
+}
+
+.picg{                
+    width: 100%;
+    height: auto;
 }
 
 .bellImg{
